--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,7 +1,4 @@
 message("LIB CMake Script")
 
-add_subdirectory(lib)
-add_subdirectory(src)
 
-message("abcdefgh")
-add_executable(helloworld main.cpp add.cpp)
+add_library(add add.cpp)
