--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.28)
 project(helloworld)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
+
 message("ROOT CMake Script")
+include_directories(lib/include)
 add_subdirectory(lib)
 add_subdirectory(src)
-
-add_executable(helloworld main.cpp add.cpp)
